Programming exercises: Set precise git commit push date as submission date (#4830)